--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGODB_URI=mongodb://localhost/amazona
 JWT_SECRET='somethingsecret'
+PAYPAL_CLIENT_ID='YourPayPalClientIdKeyFromDeveloperDotPayPalDotCom'
